exam/02/InventoryTracking-02/04-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorytracking-02-db-svc
  namespace: inventory02-ns
spec:
  clusterIP: None
  selector:
    app: inventorytracking-02-db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
