exam/02/InventoryTracking-02/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventorytracking-02-svc
  namespace: inventory02-ns
spec:
  type: ClusterIP
  selector:
    app: inventorytracking-02
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: status
      port: 8080
      targetPort: 8080
